11.rbac.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: default
spec:
  serviceAccountName: debug
  containers:
  - name: debug
    image: rkalluru/debug
