14.pod-security-standard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: psa-pss-test-ns
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: deploy-01
#   namespace: psa-pss-test-ns
#   labels:
#     app: nginx
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: nginx
#   template:
#     metadata:
#       labels:
#         app: nginx
#     spec:
#       containers:
#       - name: nginx
#         image: docker.io/nginx:1.24
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: psa-pss-test-ns
spec:
  containers:
  - name: nginx
    image: docker.io/nginx
    ports:
    - containerPort: 80
      #hostPort: 32000
