4.fail-contaimer.yml
apiVersion: v1
kind: Pod
metadata:
  name: sleep
spec:
  containers:
  - name: nginx
    image: redhat/ubi9
