7.headless.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-07
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: docker.io/rkalluru/nginx:hostname-print
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-07
spec:
  selector:
    appName: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
