12.network-policy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    project: demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    project: demo
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: frontend
  labels:
    appType: UI
spec:
  containers:
  - name: debug
    image: rkalluru/debug
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
spec:
  selector:
    appType: API
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: backend
  labels:
    appType: API
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-frontend
  namespace: backend
spec:
  podSelector:
    matchLabels:
      appType: API
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: demo
    - podSelector:
        matchLabels:
          appType: UI
    ports:
    - protocol: TCP
      port: 80
  egress:
  - {}

#   podSelector: {}
#   policyTypes:
#   - Ingress
#   - Egress
